// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loadIssues should load issues with listIssues if re-indexing 1`] = `
[
  {
    "actions": [
      "set_tags",
      "comment",
      "assign",
    ],
    "assignee": "luke",
    "author": "luke@sonarsource.com",
    "cleanCodeAttribute": "RESPECTFUL",
    "cleanCodeAttributeCategory": "RESPONSIBLE",
    "comments": [],
    "component": "foo.java",
    "componentEnabled": true,
    "componentKey": "foo.java",
    "componentLongName": "Foo.java",
    "componentName": "foo.java",
    "componentPath": "/foo.java",
    "componentQualifier": "FIL",
    "creationDate": "2016-08-15T15:25:38+0200",
    "flows": [],
    "flowsWithType": [],
    "impacts": [
      {
        "severity": "MEDIUM",
        "softwareQuality": "MAINTAINABILITY",
      },
    ],
    "issueStatus": "OPEN",
    "key": "AWaqVGl3tut9VbnJvk6M",
    "line": 62,
    "message": "Make sure this file handling is safe here.",
    "prioritizedRule": false,
    "project": "org.sonarsource.java:java",
    "projectEnabled": true,
    "projectKey": "org.sonarsource.java:java",
    "projectLongName": "SonarJava",
    "projectName": "SonarJava",
    "projectQualifier": "TRK",
    "rule": "squid:S4797",
    "scope": "MAIN",
    "secondaryLocations": [],
    "severity": "MAJOR",
    "status": "OPEN",
    "tags": [
      "cert",
      "cwe",
      "owasp-a1",
      "owasp-a3",
    ],
    "textRange": {
      "endLine": 62,
      "endOffset": 96,
      "startLine": 62,
      "startOffset": 93,
    },
    "transitions": [],
    "type": "SECURITY_HOTSPOT",
  },
]
`;

exports[`loadIssues should load issues with searchIssues if not re-indexing 1`] = `
[
  {
    "actions": [
      "set_tags",
      "comment",
      "assign",
    ],
    "assignee": "luke",
    "assigneeActive": true,
    "assigneeAvatar": "lukavatar",
    "assigneeLogin": "luke",
    "assigneeName": "Luke",
    "author": "luke@sonarsource.com",
    "cleanCodeAttribute": "RESPECTFUL",
    "cleanCodeAttributeCategory": "RESPONSIBLE",
    "comments": [],
    "component": "foo.java",
    "componentEnabled": true,
    "componentKey": "foo.java",
    "componentLongName": "Foo.java",
    "componentName": "foo.java",
    "componentPath": "/foo.java",
    "componentQualifier": "FIL",
    "creationDate": "2016-08-15T15:25:38+0200",
    "flows": [],
    "flowsWithType": [],
    "impacts": [
      {
        "severity": "MEDIUM",
        "softwareQuality": "MAINTAINABILITY",
      },
    ],
    "issueStatus": "OPEN",
    "key": "AWaqVGl3tut9VbnJvk6M",
    "line": 62,
    "message": "Make sure this file handling is safe here.",
    "prioritizedRule": false,
    "project": "org.sonarsource.java:java",
    "projectEnabled": true,
    "projectKey": "org.sonarsource.java:java",
    "projectLongName": "SonarJava",
    "projectName": "SonarJava",
    "projectQualifier": "TRK",
    "rule": "squid:S4797",
    "ruleKey": "squid:S4797",
    "ruleLang": "java",
    "ruleLangName": "Java",
    "ruleName": "Handling files is security-sensitive",
    "ruleStatus": "READY",
    "scope": "MAIN",
    "secondaryLocations": [],
    "severity": "MAJOR",
    "status": "OPEN",
    "tags": [
      "cert",
      "cwe",
      "owasp-a1",
      "owasp-a3",
    ],
    "textRange": {
      "endLine": 62,
      "endOffset": 96,
      "startLine": 62,
      "startOffset": 93,
    },
    "transitions": [],
    "type": "SECURITY_HOTSPOT",
  },
]
`;
